Change up colours and fake PS1

--- a/themes/hello-friend-ng/assets/scss/_logo.scss
+++ b/themes/hello-friend-ng/assets/scss/_logo.scss
@@ -14,13 +14,14 @@
 
   &__text {
     font-size: 1.125rem;
+    color: #008000;
   }
 
   &__cursor {
     display: inline-block;
     width: 10px;
     height: 1rem;
-    background: #fe5186;
+    background: #008000;
     margin-left: 5px;
     border-radius: 1px;
     animation: cursor 1s infinite;
